# NatQuery

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-to-pypi.yml
src/natquery/cli/: commands.py  formatter.py  main.py  shell.py
src/natquery/config/: connection.py  settings.py
src/natquery/execution/: engine.py  explain.py
src/natquery/llm/: client.py  self_corrector.py
src/natquery/observability/: cost_analyzer.py  index_recommender.py  logger.py  performance_api.py
src/natquery/orchestration/: error_classifier.py  error_handler.py  pipeline.py  workspace.py
src/natquery/prompt/: builder.py
src/natquery/schema/: extractor.py  formatter.py
src/natquery/security/: validator.py
tests/: conftest.py
tests/config/: test_connection.py  test_settings.py
tests/integration/: test_pipeline.py  test_workspace.py
tests/unit/: test_cli_commands.py  test_cli_commands_extended.py  test_cli_formatter_extended.py  test_cli_main.py  test_cli_shell.py  test_connection.py  test_cost_analyzer.py  test_error_classifier.py  test_error_handler.py  test_execution_engine.py  test_explain.py  test_index_recommender.py  test_llm_client.py  test_logger.py  test_performance_api.py  test_prompt_builder.py  test_schema_extractor.py  test_schema_formatter.py  test_self_corrector.py  test_settings.py  test_unit_pipeline.py  test_unit_workspace.py  test_validator.py
