[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "natquery"
version = "0.0.1"
requires-python = ">=3.10"

dependencies = [
    "psycopg2-binary",
    "groq",
    "rich"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black==25.1.0",
    "ruff==0.15.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
natquery = "natquery.cli.main:main"

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"